--- a/packages/web-client/index.html
+++ b/packages/web-client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Brotato v2 Demo</title>
+    <title>Vampire Survivor Like Demo</title>
     <style>
       body {
         margin: 0;
