build: try vercel config

--- a/packages/web-client/index.html
+++ b/packages/web-client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/assets/favicon.ico" />
+    <link rel="icon" href="%BASE_URL%assets/favicon.ico" />
     <title>Vampire Survivor Like Demo</title>
     <style>
       body {
@@ -15,6 +15,6 @@
     </style>
   </head>
   <body>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="%BASE_URL%src/main.ts"></script>
   </body>
 </html>
