--- a/packages/simulator/index.html
+++ b/packages/simulator/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- enable shared array buffer -->
+    <meta http-equiv="Cross-Origin-Embedder-Policy" content="require-corp" />
+    <meta http-equiv="Cross-Origin-Opener-Policy" content="same-origin" />
     <link rel="icon" href="%BASE_URL%assets/favicon.ico" />
     <title>Simulator Demo</title>
     <link rel="stylesheet" href="/src/style.css" />
